# chrono-daemon

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  concepts.md  recipes.md  roadmap.md
docs/adr/: 0001-channel-is-the-sole-comm-primitive.md  0002-wall-and-sim-clocks-as-pluggable-protocol.md  0003-daemon-dual-api-class-and-decorator.md  0004-on-error-shutdown-by-default.md  0005-no-lifecycle-states-beyond-start-run-stop.md  0006-in-process-v0-transport-adapter-slot.md  0007-anyio-only-runtime-dependency.md  0008-sim-aware-logging-and-supervisor-diagnostics.md  0009-cooperative-stop-signaling.md  0010-channel-endpoints-are-single-owner.md  0011-zmq-transport-extra.md  README.md
docs/archive/: reflex-dual-postmortem.md  system-stack-postmortem.md
docs/archive/proposal/: 01_PROPOSAL.md  02_COMPETITIVE_LANDSCAPE.md
docs/archive/proposal/03_REFERENCE_SURVEY/: apollo_cyberrt.md  dora_rs.md  drake.md  erdos.md  holoscan.md  horus.md  orocos_rtt.md  redisros.md  simple_env.md
docs/proposal/: 01_PROPOSAL.md
docs/proposal/03_REFERENCE_SURVEY/: apollo_cyberrt.md  dora_rs.md  drake.md  erdos.md  holoscan.md  horus.md  orocos_rtt.md  redisros.md  simple_env.md
docs/recipes/: README.md  batcher.py  select.py  sync_bridge.py
examples/: README.md  reflex_dual_mock.py  reflex_dual_multi_session.py  system_stack_mock.py  system_stack_multi_session.py
src/chrono_daemon/: __init__.py  _logging.py  _types.py  channel.py  clock.py  context.py  daemon.py  supervisor.py
src/chrono_daemon/recipes/: __init__.py  _flow.py  batcher.py  cooperative_every.py  fanout.py  latest.py  load_balance.py  lossy.py  merge.py  select.py  supervisor_host.py  sync_bridge.py  worker_pool.py
src/chrono_daemon/recipes/coordination/: __init__.py  batcher.py  cooperative_every.py  select.py
src/chrono_daemon/recipes/hosting/: __init__.py  supervisor_host.py  sync_bridge.py
src/chrono_daemon/recipes/routing/: __init__.py  fanout.py  load_balance.py  merge.py  worker_pool.py
src/chrono_daemon/recipes/state/: __init__.py  latest.py  lossy.py
src/chrono_daemon/transports/: __init__.py  zmq.py
src/runlet/: __init__.py  _logging.py  _types.py  channel.py  clock.py  context.py  daemon.py  supervisor.py
src/runlet/recipes/: __init__.py  _routing.py  batcher.py  cooperative_every.py  fanout.py  latest.py  load_balance.py  lossy.py  merge.py  select.py  sync_bridge.py  worker_pool.py
src/runlet/transports/: __init__.py  zmq.py
tests/: conftest.py  test_channel.py  test_clock.py  test_daemon.py  test_examples.py  test_integration.py  test_logging.py  test_recipes.py  test_recipes_lossy.py  test_supervisor.py  test_zmq_transport.py
